# openenclave

./: CHANGELOG.md  CMakeLists.txt
cmake/: make_group.cmake
common/: result.c
common/sgx/: dynlink.c
debugger/gdb-extension/: gdb_sgx_plugin.py
debugger/pythonExtension/: gdb_sgx_plugin.py
docs/: SgxExceptionHandling.md
enclave/: link.c
enclave/core/: CMakeLists.txt  debugmalloc.c  init_fini.c  tracee.c
enclave/core/sgx/: calls.c  globals.c  reloc.c  threadlocal.c
host/: hostthread.h
host/linux/: hostthread.c
host/sgx/: calls.c  create.c  dynlink.c  elf.c  enclave.h  load.c  loadelf.c
include/openenclave/bits/: result.h
include/openenclave/edger8r/: host.h
include/openenclave/edl/: fcntl.edl
include/openenclave/internal/: elf.h  globals.h  load.h  module.h  syscall.h  syscall_decls.h  trace.h
include/openenclave/internal/syscall/: declarations.h
include/openenclave/internal/syscall/sys/: stat.h
libc/: CMakeLists.txt  locale.c  malloc.c  mman.c  syscalls.c
logging/: CMakeLists.txt
logging/enclave/: CMakeLists.txt  tracee.c
samples/attested_tls/non_enc_client/: CMakeLists.txt
scripts/: .check-license.ignore  install-windows-prereqs.ps1
syscall/: CMakeLists.txt  syscall.c
tests/: CMakeLists.txt
tests/attestation_cert_apis/enc/: CMakeLists.txt
tests/bigmalloc/enc/: enc.c
tests/debug-mode/enc/: enc.c
tests/demos/: CMakeLists.txt
tests/demos/apps/: CMakeLists.txt
tests/demos/apps/redis/: CMakeLists.txt  demo.edl
tests/demos/apps/redis/enc/: CMakeLists.txt  enc.c  stubs.c  thread.cpp
tests/demos/apps/redis/host/: CMakeLists.txt  host.cpp
tests/demos/cpp/: CMakeLists.txt
tests/demos/cpp/boost/: CMakeLists.txt  demo.edl
tests/demos/cpp/boost/enc/: enc.cpp  stubs.c
tests/demos/cpp/boost/host/: host.c
tests/demos/cpp/protobuf/: CMakeLists.txt
tests/demos/cpp/protobuf/enc/: CMakeLists.txt  enc.cpp
tests/demos/cpp/protobuf/host/: CMakeLists.txt  host.c
tests/demos/cpp/rapidjson/enc/: CMakeLists.txt  enc.cpp
tests/demos/cpp/rapidjson/host/: CMakeLists.txt  host.c
tests/demos/demo1/: CMakeLists.txt
tests/demos/demo1/enc/: CMakeLists.txt  enc.c
tests/demos/demo1/host/: CMakeLists.txt  host.c
tests/demos/demo11/host/: CMakeLists.txt
tests/demos/demo12/: CMakeLists.txt
tests/demos/demo12/enc/: CMakeLists.txt
tests/demos/demo12/host/: host.c
tests/demos/demo13/: demo.edl
tests/demos/demo13/enc/: enc.c
tests/demos/demo13/host/: host.c
tests/demos/demo2/: CMakeLists.txt
tests/demos/demo3/enc/: enc.c
tests/demos/demo3/host/: CMakeLists.txt  host.c
tests/demos/demo4/enc/: CMakeLists.txt
tests/demos/demo5/: CMakeLists.txt
tests/demos/demo5/enc/: CMakeLists.txt
tests/demos/demo5/host/: CMakeLists.txt
tests/demos/demo6/enc/: CMakeLists.txt  enc.cpp  stubs.c
tests/demos/demo6/host/: #host.c#
tests/demos/demo7/enc/: CMakeLists.txt  enc.cpp
tests/demos/demo8/enc/: enc.cpp  stubs.c
tests/demos/demo9/enc/: CMakeLists.txt
tests/demos/libs/: CMakeLists.txt
tests/demos/libs/hiredis/: CMakeLists.txt  demo.edl
tests/demos/libs/hiredis/enc/: CMakeLists.txt  enc.c  stubs.c
tests/demos/libs/hiredis/host/: CMakeLists.txt  host.c
tests/demos/libs/libevent/: CMakeLists.txt  demo.edl
tests/demos/libs/libevent/enc/: CMakeLists.txt  enc.cpp  stubs.c
tests/demos/libs/libevent/host/: .#host.c  CMakeLists.txt  host.c
tests/demos/libs/libgcc/: CMakeLists.txt  demo.edl
tests/demos/libs/libgcc/enc/: CMakeLists.txt  enc.c
tests/demos/libs/libgcc/host/: CMakeLists.txt  host.c
tests/demos/libs/libz/enc/: enc.cpp
tests/demos/libs/sqlite/: CMakeLists.txt
tests/demos/libs/sqlite/enc/: CMakeLists.txt  enc.c
tests/demos/libs/sqlite/host/: CMakeLists.txt
tests/demos/libs/zlib/: CMakeLists.txt
tests/demos/libs/zlib/enc/: CMakeLists.txt
tests/demos/libs/zlib/host/: CMakeLists.txt  host.c
tests/demos/runtimes/: CMakeLists.txt
tests/demos/runtimes/lua/enc/: CMakeLists.txt  enc.cpp  stubs.c
tests/demos/runtimes/nodejs/: CMakeLists.txt
tests/demos/runtimes/nodejs/enc/: CMakeLists.txt  enc.cpp
tests/demos/runtimes/nodejs/host/: CMakeLists.txt
tests/demos/runtimes/ocaml/enc/: CMakeLists.txt  enc.c
tests/demos/runtimes/ocaml/host/: host.c
tests/demos/wip/demo11/: CMakeLists.txt
tests/demos/wip/demo11/enc/: CMakeLists.txt
tests/demos/wip/demo11/host/: host.c
tests/demos/wip/demo12/: demo.edl
tests/demos/wip/demo13/: CMakeLists.txt
tests/demos/wip/demo9/enc/: #enc.cpp#  .#enc.cpp  CMakeLists.txt  enc.cpp
tests/demos/wip/oeedger8r/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  demo.edl
tests/echo/enc/: enc.c
tests/ldd/enc/: CMakeLists.txt  enc.c
tests/memory/enc/: enc.c
tests/memory/host/: CMakeLists.txt
tests/mman/enc/: enc.c
tests/props/host/: host.c
tests/qeidentity/enc/: CMakeLists.txt
tests/scmml/: scmml.edl
tests/scmml/enc/: CMakeLists.txt  enc.c
tests/scmml/sm/: CMakeLists.txt  sm.c  start.c
tests/snmalloc/enc/: CMakeLists.txt  enc.c
tests/terminate/: CMakeLists.txt  terminate.edl
tests/terminate/enc/: CMakeLists.txt  enc.c
tests/terminate/host/: CMakeLists.txt  host.cpp
tests/tools/: CMakeLists.txt
tests/tools/apkman/: CMakeLists.txt
tests/tools/apkman/cpp/: CMakeLists.txt
tests/tools/apkman/cpp/thread_local/enc/: CMakeLists.txt  enc.cpp
tests/tools/apkman/ml/: CMakeLists.txt
tests/tools/apkman/ml/tensorflow/: CMakeLists.txt  test.edl
tests/tools/apkman/ml/tensorflow/enc/: CMakeLists.txt  bitmap_helpers.cc  bitmap_helpers.h  bitmap_helpers_impl.h  build.bash  enc.c  get_top_n.h  get_top_n_impl.h  label_image.cc  label_image.h  log.h  stubs.c  tflite_misc.cc
tests/tools/apkman/ml/tensorflow/host/: CMakeLists.txt  host.c
tests/tools/oecert/enc/: CMakeLists.txt
tests/tools/oecert/host/: CMakeLists.txt
tests/tools/oecertdump/: oecertdump.edl
tests/tools/oecertdump/enc/: CMakeLists.txt  enc.cpp
tests/tools/oecertdump/host/: CMakeLists.txt  host.cpp  sgx_quote.cpp
tools/: CMakeLists.txt
tools/apkman/: apkman
tools/oeedger8r/src/: Sources.ml
tools/oesign/: oeinfo.c
(+11 files in other folders)
