# Copyright (c) Open Enclave SDK contributors.
# Licensed under the MIT License.

# Build enclave shared object dependencies
set(LDD_TEST_ENC_DIR ${CMAKE_CURRENT_BINARY_DIR})
add_subdirectory(dep_1a)
add_subdirectory(dep_1b)

# Build test enclave
set(EDL_FILE ../ldd.edl)

add_custom_command(
  OUTPUT ldd_t.h ldd_t.c
  DEPENDS ${EDL_FILE} edger8r
  COMMAND
    edger8r --trusted ${EDL_FILE} --search-path ${PROJECT_SOURCE_DIR}/include
    ${DEFINE_OE_SGX} --search-path ${CMAKE_CURRENT_SOURCE_DIR})

add_enclave(
  TARGET
  ldd_enc
  UUID
  F3E7FC46-7173-413C-8FA3-EB8336391BC1
  SOURCES
  enc.c
  ${CMAKE_CURRENT_BINARY_DIR}/ldd_t.c)

enclave_include_directories(ldd_enc PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
enclave_link_libraries(ldd_enc
  oelibc
  ldd_enc_dep_1a
  ldd_enc_dep_1b
   /mnt/c/work/alpine-libs/libmylib.so
   /mnt/c/work/alpine-libs/libsqlite3.so.0
   /mnt/c/work/alpine-libs/libcrypto.so.1.1
   /mnt/c/work/alpine-libs/ld-musl-x86_64.so.1
  -Wl,--require-defined=strcspn
  -Wl,--require-defined=setbuf
  -Wl,--require-defined=strstr
  -Wl,--require-defined=clock_gettime
  -Wl,--require-defined=fread
  -Wl,--require-defined=strerror_r
  -Wl,--require-defined=fgets
  -Wl,--require-defined=close  
  -Wl,--require-defined=feof
  -Wl,--require-defined=atexit
  -Wl,--require-defined=freeaddrinfo
  -Wl,--require-defined=fputc
  -Wl,--require-defined=strchr
  -Wl,--require-defined=stat
  -Wl,--require-defined=ntohs
  -Wl,--require-defined=shmdt
  -Wl,--require-defined=madvise
  -Wl,--require-defined=strrchr
  -Wl,--require-defined=shmdt
  -Wl,--require-defined=fputs
  -Wl,--require-defined=getegid
  -Wl,--require-defined=sysconf
  -Wl,--require-defined=fflush
  -Wl,--require-defined=getnameinfo
  -Wl,--require-defined=getsockname
  -Wl,--require-defined=uname
  -Wl,--require-defined=accept
  -Wl,--require-defined=__stack_chk_fail
  -Wl,--require-defined=qsort
  -Wl,--require-defined=dlclose
  -Wl,--require-defined=fstat
  -Wl,--require-defined=closedir
  -Wl,--require-defined=fileno
  -Wl,--require-defined=sigaction
  -Wl,--require-defined=listen
  -Wl,--require-defined=shmget
  -Wl,--require-defined=gethostbyname
  -Wl,--require-defined=perror
  -Wl,--require-defined=strncasecmp
  -Wl,--require-defined=strcpy
  -Wl,--require-defined=read
  -Wl,--require-defined=shutdown
  -Wl,--require-defined=setsockopt
  -Wl,--require-defined=sendto
  -Wl,--require-defined=strcat
  -Wl,--require-defined=geteuid
  -Wl,--require-defined=tcsetattr
  -Wl,--require-defined=atoi
  -Wl,--require-defined=opendir
  -Wl,--require-defined=syslog
  -Wl,--require-defined=pthread_atfork
  -Wl,--require-defined=strspn
  -Wl,--require-defined=fopen
  -Wl,--require-defined=dlerror
  -Wl,--require-defined=ferror
  -Wl,--require-defined=getpid
  -Wl,--require-defined=dlsym
  -Wl,--require-defined=write
  -Wl,--require-defined=socket
  -Wl,--require-defined=gettimeofday
  -Wl,--require-defined=time
  -Wl,--require-defined=fseek
  -Wl,--require-defined=strncpy
  -Wl,--require-defined=fclose
  -Wl,--require-defined=strdup
  -Wl,--require-defined=ioctl
  -Wl,--require-defined=closelog
  -Wl,--require-defined=getaddrinfo
  -Wl,--require-defined=gai_strerror
  -Wl,--require-defined=recvfrom
  -Wl,--require-defined=lseek
  -Wl,--require-defined=strtoul
  -Wl,--require-defined=open
  -Wl,--require-defined=sprintf
  -Wl,--require-defined=signal
  -Wl,--require-defined=getuid
  -Wl,--require-defined=connect
  -Wl,--require-defined=select
  -Wl,--require-defined=sscanf
  -Wl,--require-defined=bind
  -Wl,--require-defined=openlog
  -Wl,--require-defined=strtol
  -Wl,--require-defined=mprotect
  -Wl,--require-defined=clearerr
  -Wl,--require-defined=fdopen
  -Wl,--require-defined=tcgetattr
  -Wl,--require-defined=getsockopt
  -Wl,--require-defined=shmat
  -Wl,--require-defined=dladdr
  -Wl,--require-defined=getgid
  -Wl,--require-defined=mlock
  -Wl,--require-defined=ftell
  -Wl,--require-defined=chmod
  -Wl,--require-defined=readdir
  -Wl,--require-defined=stdin
  -Wl,--require-defined=strcasecmp
  -Wl,--require-defined=log
  -Wl,--require-defined=dlerror
  -Wl,--require-defined=sysconf
  -Wl,--require-defined=utimes
  -Wl,--require-defined=usleep
  -Wl,--require-defined=getpid
  -Wl,--require-defined=qsort
  -Wl,--require-defined=lseek
  -Wl,--require-defined=dlclose
  -Wl,--require-defined=__stack_chk_fail
  -Wl,--require-defined=strrchr
  -Wl,--require-defined=fdatasync
  -Wl,--require-defined=dlsym
  -Wl,--require-defined=gettimeofday
  -Wl,--require-defined=time
  -Wl,--require-defined=localtime_r
  -Wl,--require-defined=open
  -Wl,--require-defined=access
  -Wl,--require-defined=getcwd
  -Wl,--require-defined=fstat
  -Wl,--require-defined=ftruncate
  -Wl,--require-defined=fcntl
  -Wl,--require-defined=read
  -Wl,--require-defined=write
  -Wl,--require-defined=fchmod
  -Wl,--require-defined=posix_fallocate
  -Wl,--require-defined=unlink
  -Wl,--require-defined=mkdir
  -Wl,--require-defined=rmdir
  -Wl,--require-defined=fchown
  -Wl,--require-defined=geteuid
  -Wl,--require-defined=mremap
  -Wl,--require-defined=readlink
  -Wl,--require-defined=lstat
  -Wl,--require-defined=snprintf
  -Wl,--require-defined=__stack_chk_fail
  -Wl,--require-defined=time
)
